--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
 
+    api 'com.orhanobut:logger:2.2.0'
+
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
