--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
     implementation project(':mylibrary')
+
+    compile ("io.reactivex.rxjava2:rxandroid:2.0.1") {
+        exclude module: 'rxjava2', group: 'io.reactivex'
+    }
+    compile "io.reactivex.rxjava2:rxjava:2.1.3"
+
+    annotationProcessor externalJakewhartonButterknifeCompiler
+    compile (externalJakewhartonButterknife){
+        exclude module: 'support-annotations', group: 'com.android.support'
+        exclude module: 'support-compat', group: 'com.android.support'
+    } // 资源注入
 }
