--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -36,5 +36,7 @@ dependencies {
 
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
+    compile 'com.shuyu:gsyVideoPlayer-x64:4.1.0'
+    compile 'com.shuyu:gsyVideoPlayer-x86:4.1.0'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
 }
